--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,7 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+staging:
+  <<: *default
+  database: ../../shared/db/staging.sqlite3
